--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@ separate or communicate identity across *repeat* visits to the *same* site.
 
 A [=person=]'s <dfn>identity</dfn> is the set of characteristics that define
 them. Their identity *in a [=context=]* is the set of characteristics they
-present to that context. People frequently present different identities to
+present in that context. People frequently present different identities to
 different contexts, and also frequently share an identity among several
 contexts.
 
