--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@ cookies and other storage (which is sometimes automatic at the end of each
 session).
 
 Even though this is the default, [=user agents=] can further restrict their
-definition of [=machine-enforceable context=] to better aid their users.
+definition of [=machine-enforceable context=] to better aid their users for instance by partitioning identities per subdomain or site path when the structure of a given site is known.
 
 Where possible, [=user agents=] should prevent people from being
 [=cross-context recognition|recognized=] across [=partitions=] unless they
