--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@ is using the same [=identity=] over time, including [[RFC6265|cookies]],
 [=person=]'s preferences, shopping carts, etc., and people have come to expect
 this behavior in some contexts.
 
-<dfn>Fingerprinting</dfn> consists of using attributes of the [=person=]'s
+<dfn>Fingerprinting</dfn> ([[?UNSANCTIONED-TRACKING]]) consists of using attributes of the [=person=]'s
 browser and platform that are consistent between two or more visits and
 probably unique to the person.
 
