--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@ a link that has been decorated with an identifier, collecting the same piece
 of identifying information on both sites, or by correlating the timestamps of
 an event that occurs nearly-simultaneously on both sites. A privacy harm
 occurs through [=cross-site recognition=], unless the person could reasonably
-expect the sites to discover this.
+expect the sites to discover this and has effective means to mitigate the issue.
 
 <dfn>Same-site recognition</dfn> is when a single site discovers and uses the
 fact that two or more visits probably came from the same [=person=].
