minor will -> may change around proving identity

--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@ they are in.</span>
 
 A [=user agent=] which upholds this principle will sometimes ensure that *one*
 site can't learn anything about its user's behavior on *another* site. At
-other times, the UA will help its user *prove* to one site that they have a
+other times, the UA may help its user *prove* to one site that they have a
 particular identity on another site. Similarly, a UA will help its user to
 separate or communicate identity across *repeat* visits to the *same* site.
 
