--- a/index.html
+++ b/index.html
@@ -896,11 +896,12 @@ they are in.</span>
 
 </div>
 
-A [=user agent=] which upholds this principle will sometimes ensure that *one*
-site can't learn anything about its user's behavior on *another* site. At
-other times, the UA may help its user *prove* to one site that they have a
-particular identity on another site. Similarly, a UA will help its user to
-separate or communicate identity across *repeat* visits to the *same* site.
+In order to uphold this principle, a [=user agent=] sometimes needs to ensure
+that *one* site can't learn anything about its user's behavior on *another*
+site, and sometimes the UA needs to help its user *prove* to one site that
+they have a particular identity on another site. Similarly, a UA can help its
+user to separate or communicate identity across *repeat* visits to the *same*
+site.
 
 A [=person=]'s <dfn>identity</dfn> is the set of characteristics that define
 them. Their identity *in a [=context=]* is the set of characteristics they
