Identity: add link to Ephemeral Fingerprinting for timing attacks

--- a/index.html
+++ b/index.html
@@ -955,9 +955,12 @@ Traditionally, sites have accomplished this using
 cross-site</a> cookies, but it can also be done by having someone navigate to
 a link that has been decorated with an identifier, collecting the same piece
 of identifying information on both sites, or by correlating the timestamps of
-an event that occurs nearly-simultaneously on both sites. A privacy harm
-occurs through [=cross-site recognition=], unless the person could reasonably
-expect the sites to discover this and has effective means to mitigate the issue.
+an event that occurs nearly-simultaneously on both sites (this is an example
+of a <a
+href="https://github.com/asankah/ephemeral-fingerprinting/blob/2395a35aac260d4d2f880eeb05c2617b0fd642ea/README.md">timing
+attack</a>). A privacy harm occurs through [=cross-site recognition=], unless
+the person could reasonably expect the sites to discover this and has
+effective means to mitigate the issue.
 
 <dfn>Same-site recognition</dfn> is when a single site discovers and uses the
 fact that two or more visits probably came from the same [=person=].
