--- a/index.html
+++ b/index.html
@@ -1055,14 +1055,19 @@ of an event that occurs nearly-simultaneously on both sites.
 
 ## Data minimization {#data}
 
+<div class="practice">
 <span class="practicelab">Sites, user agents and other parties should minimize the amount of data
-about people that is shared with or transferred between parties on the Web.</span>
+about people they transfer between parties on the Web.</span>
+</div>
 
 Data minimization limits the risks of data being disclosed or misused and also makes it possible to
 more meaningfully provide people with understandable decisions about data about them.
 
-<span class="practicelab">Web APIs should be designed to minimize the amount of data that is requested
-and provide granularity and user controls over personal data that is communicated to sites.</span>
+<div class="practice">
+<span class="practicelab">Web APIs should be designed to minimize the amount of data that sites need
+to request to carry out their users' goals and provide granularity and user controls over personal
+data that is communicated to sites.</span>
+</div>
 
 <aside class="note">
 This principle was further explored in an earlier TAG draft on <a
