--- a/index.html
+++ b/index.html
@@ -1110,6 +1110,9 @@ page for <dfn>ancillary uses</dfn> including:
 * performance, including caching and prefetching content; 
 * software updates.
 
+<dfn>Telemetry and analytics</dfn>, including browser telemetry and site telemetry, are a common
+cluster of ancillary uses.
+
 In some cases, mechanisms for sharing data are provided in order to minimize some other data
 collection mechanism identified as more intrusive or costly.
 
@@ -1152,8 +1155,11 @@ heuristics about sensitivity of data or trust in a particular context. To facili
 understanding of user preferences, user agents can provide browser-configurable signals to directly
 communicate common user preferences.
 
-Revealing user preferences or other heuristics in providing or disabling functionality could also be
-used as part of <a>browser fingerprinting</a> to identify users across sites.
+<div class="practice">
+  <span class="practicelab">Specifications that define functionality for telemetry and analytics
+  should explicitly note the <a href="#dfn-telemetry-and-analytics">analytics</a> use to facilitate modal or general user
+  choices.</span>
+</div>
 
 <aside class="example">
   Sites and browsers wish to collect telemetry data to determine how frequently features are used or
@@ -1167,6 +1173,12 @@ used as part of <a>browser fingerprinting</a> to identify users across sites.
   A user visits a mapping website that they regularly visit and clicks a locator icon; although
   precise geolocation can be very sensitive, the user agent can readily determine the user's intent.
 </aside>
+
+Data exposed for ancillary uses including <a href="#dfn-telemetry-and-analytics">telemetry</a> may
+often reveal characteristics of user configuration, device, environment or behavior that could be
+used as part of <a>browser fingerprinting</a> to identify users across sites. Revealing user
+preferences or other heuristics in providing or disabling functionality could also contribute to a
+browser fingerprint.
 
 ## Sensitive Information {#hl-sensitive-information}
 
