Add the draft finding as a reference.

--- a/index.html
+++ b/index.html
@@ -121,6 +121,13 @@
           href: 'https://foundation.mozilla.org/en/data-futures-lab/data-for-empowerment/data-futures-lab-glossary/',
           publisher: 'Mozilla Foundation',
         },
+        'Data-Minimization': {
+          title: 'Data Minimization in Web APIs',
+          authors: ['Daniel Appelquist'],
+          href: 'https://www.w3.org/2001/tag/doc/APIMinimization-20100605.html',
+          publisher: 'W3C TAG',
+          status: 'Draft Finding',
+        },
         'De-identification-Privacy-Act': {
           title: 'De-identification and the Privacy Act',
           authors: ['Office of the Australian Information Commissioner'],
@@ -1070,9 +1077,7 @@ data that is communicated to sites.</span>
 </div>
 
 <aside class="note">
-This principle was further explored in an earlier TAG draft on <a
-href="https://www.w3.org/2001/tag/doc/APIMinimization-20100605.html">Data Minimization in Web
-APIs</a>.
+This principle was further explored in an earlier TAG draft on [[[Data-Minimization]]].
 </aside>
 
 Because personal data may be sensitive in unexpected ways, or have risks of future uses that could be
