fix duplicate section identifier

--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@ can also be done by having someone navigate to a link that has been decorated wi
 collecting the same piece of identifying information on both sites, or by correlating the timestamps
 of an event that occurs nearly-simultaneously on both sites.
 
-## Data minimization {#data}
+## Data minimization {#data-minimization}
 
 <div class="practice">
 <span class="practicelab">Sites, user agents and other parties should minimize the amount of data
