Identity: remove redundant sentence

--- a/index.html
+++ b/index.html
@@ -990,7 +990,9 @@ cookies and other storage (which is sometimes automatic at the end of each
 session).
 
 Even though this is the default, [=user agents=] can further restrict their
-definition of [=machine-enforceable context=] to better aid their users for instance by partitioning identities per subdomain or site path when the structure of a given site is known.
+definition of [=machine-enforceable context=] to better aid their users for
+instance by partitioning identities per subdomain or site path when the
+structure of a given site is known.
 
 Where possible, [=user agents=] should prevent people from being
 [=cross-context recognition|recognized=] across [=partitions=] unless they
@@ -1000,8 +1002,7 @@ If a [=person=] visits two or more web pages from different [=partitions=],
 and does not explicitly express the same identity on each visit, the UA should
 take steps to prevent [=same-site recognition=]. Note that sites can do harm
 even if they can't be *completely* certain that visits come from the same
-person. The UA may even help people to explicitly present different
-[=identities=] to subdivisions of a single [=site=].
+person.
 
 [=User agents=] and identity-related web features can do the following to help
 people present the [=identity=] that they want to present to a given website:
