link to defined term of personal data

--- a/index.html
+++ b/index.html
@@ -1063,8 +1063,8 @@ of an event that occurs nearly-simultaneously on both sites.
 ## Data minimization {#data-minimization}
 
 <div class="practice">
-<span class="practicelab">Sites, user agents and other parties should minimize the amount of data
-about people they transfer between parties on the Web.</span>
+<span class="practicelab">Sites, user agents and other parties should minimize the amount of
+<a>personal data</a> they transfer between parties on the Web.</span>
 </div>
 
 Data minimization limits the risks of data being disclosed or misused and also makes it possible to
@@ -1072,15 +1072,15 @@ more meaningfully provide people with understandable decisions about data about 
 
 <div class="practice">
 <span class="practicelab">Web APIs should be designed to minimize the amount of data that sites need
-to request to carry out their users' goals and provide granularity and user controls over personal
-data that is communicated to sites.</span>
+to request to carry out their users' goals and provide granularity and user controls over <a>personal
+data</a> that is communicated to sites.</span>
 </div>
 
 <aside class="note">
 This principle was further explored in an earlier TAG draft on [[[Data-Minimization]]].
 </aside>
 
-Because personal data may be sensitive in unexpected ways, or have risks of future uses that could be
+Because <a>personal data</a> may be sensitive in unexpected ways, or have risks of future uses that could be
 unexpected or harmful, minimization as a principle applies to personal data that is not currently
 known to be identifying, sensitive or otherwise potentially harmful.
 
