update issue link #150 to reflect ongoing iteration

--- a/index.html
+++ b/index.html
@@ -1087,10 +1087,8 @@ known to be identifying, sensitive or otherwise potentially harmful.
 ### Ancillary uses
 
 <aside class="issue">
-  There is not currently consensus among the authors and contributors to this document about the below
-  principles. Please see <a href="https://github.com/w3ctag/privacy-principles/issues/150">this
-  issue</a>
-  for more details.
+  See <a href="https://github.com/w3ctag/privacy-principles/issues/150">the issue on ancillary
+  uses</a> for ongoing discussion and iteration on this principle.
 </aside>
 
 In maintaining duties of <a href="#dfn-duty-of-protection">protection</a>, <a
