--- a/index.html
+++ b/index.html
@@ -1337,6 +1337,13 @@ information into three categories:
         the same events it would use to make the page interactive, so we can't block this
         information access either.
 
+    These principles don't describe exactly how to distinguish acceptable
+    information from information we'd rather not expose. API designers instead
+    need to balance the harm to users from exposing information against the harm
+    to users from blocking that exposure. When in doubt, designers should ensure
+    that different user agents can help their users balance the costs in
+    different ways.
+
 The following subsections discuss how to review an API proposal that exposes data that
 provides a new way to infer each of the above categories of information. They explain how
 to <a data-cite="design-principles#leave-the-web-better">leave the web better than you
