introducing the different parties in information flows and the different threats
starts to address #161

--- a/index.html
+++ b/index.html
@@ -479,6 +479,21 @@ unexpected shocking images, loud noises while one intends to sleep, manipulative
 interruptive messages when a person's focus is on something else, or harassment when they seek
 social interactions.
 
+On the Web, [=information flows=] may involve a wide variety of [=parties=] that are not always
+recognizable or obvious to a user within a particular interaction. Visiting a website may involve
+the parties that operate that site and its functionality, but also network attackers, which may
+include: Internet service providers; other network operators; local institutions providing a network
+connection including schools, libraries or universities; government intelligence services; malicious
+hackers who have gained access to the network or the systems of any of the other parties. High-level
+threats including [=surveillance=] may be pursued by these parties. Pervasive monitoring, a form of
+large-scale, indiscriminate surveillance, is a known attack on the privacy of users of the Internet
+and the Web [[RFC7258]].
+
+Information flows may also involve other people &mdash; for example, other users of a site &mdash;
+which could include friends, family members, teachers, strangers or government officials. Some
+threats to privacy, including both [=disclosure=] and harassment, may be particular to the other
+people involved in the information flow.
+
 ## Individual Autonomy {#autonomy}
 
 A [=person=]'s <dfn data-lt="autonomous">autonomy</dfn> is their ability to make decisions of their own volition,
