--- a/index.html
+++ b/index.html
@@ -1546,7 +1546,9 @@ to respond with information that may differ from the truth can be essential in p
 component of fingerprinting mitigation, and can be required for auditing purposes such that an auditor may
 pretend to be someone else in order for instance to detect discrimination.
 
-In some cases, sites do not abide by data minimisation principles and request more information than they realistically require. This principle supports [=people=] in defending under such cases.
+In some cases, sites do not abide by data minimisation principles and request more information than they realistically
+require. This principle supports [=people=] in defending under such cases.
+
 It is worth noting that this principle deliberately empowers [=people=] to provide deceptive information. In the
 general case, the ability for people to present as they wish is more important than the ability of computers to
 prevent them from doing so. Sites should include deception in their threat modelling.
