--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
       format: 'markdown',
       editors: [{
         name: 'Robin Berjon',
-        company: 'The New York Times',
-        companyURL: 'https://nytimes.com/',
+        company: 'Protocol Labs',
+        companyURL: 'https://protocol.ai/',
         url: 'https://berjon.com/',
+        note: 'The New York Times until Sep 2022',
         w3cid: 34327,
       }, {
         name: 'Jeffrey Yasskin',
@@ -1096,21 +1097,21 @@ href="#dfn-duty-of-discretion">discretion</a> and <a href="#dfn-duty-of-loyalty"
 agents should be conservative when sharing data not necessary to satisfy a user's immediate goals.
 
 On the Web, user agents and sites often communicate data even outside the need to load and display a
-page for <dfn>ancillary uses</dfn> including: 
+page for <dfn>ancillary uses</dfn> including:
 
-* browser telemetry, including: 
-  * performance measurements, 
-  * measuring feature usage, 
-  * debugging site, browser and networking issues, and, 
-  * detecting security problems or attacks; 
-* site telemetry, including: 
-  * performance measurements, 
-  * analytics about usage and visitors, 
-  * debugging site issues, and, 
-  * detecting security problems or attacks; 
-* advertising and social media sharing, including: 
-  * measurement, targeting, ad auctions, personalization, fraud prevention; 
-* performance, including caching and prefetching content; 
+* browser telemetry, including:
+  * performance measurements,
+  * measuring feature usage,
+  * debugging site, browser and networking issues, and,
+  * detecting security problems or attacks;
+* site telemetry, including:
+  * performance measurements,
+  * analytics about usage and visitors,
+  * debugging site issues, and,
+  * detecting security problems or attacks;
+* advertising and social media sharing, including:
+  * measurement, targeting, ad auctions, personalization, fraud prevention;
+* performance, including caching and prefetching content;
 * software updates.
 
 <dfn>Telemetry and analytics</dfn>, including browser telemetry and site telemetry, are a common
@@ -1123,7 +1124,7 @@ Different users will want to share different kinds and amounts of data with webs
 some people would reasonably anticipate sharing such data or identify that use as a
 commonly-accepted contextual norm and some people would be willing to participate (for example,
 might have explicitly decided to contribute if they had the time and understanding to consider
-details about such a use) and some people would identify those uses as supporting their own goals. 
+details about such a use) and some people would identify those uses as supporting their own goals.
 
 Aggregated or <a href="#dfn-de-identified">de-identified</a> data is often more likely to be
 acceptable in these senses and often still contributes to the collective benefit while minimizing
@@ -1143,7 +1144,7 @@ privacy</a>). But some people might also object, in particular instances or in g
   Force">IRTF</abbr> <a href="https://datatracker.ietf.org/rg/pearg/about/"><abbr title="Privacy
   Enhancements and Assessments Research Group">pearg</abbr></a> and W3C <a
   href="https://patcg.github.io/"><abbr title="Private Advertising Technology Community
-  Group">PATCG</abbr></a> groups may be relevant. 
+  Group">PATCG</abbr></a> groups may be relevant.
 </aside>
 
 <div class="practice">
