--- a/index.html
+++ b/index.html
@@ -150,9 +150,10 @@ var[data-type]:hover::after,var[data-type]:hover::before{opacity:1}
   "editors": [
     {
       "name": "Robin Berjon",
-      "company": "The New York Times",
-      "companyURL": "https://nytimes.com/",
+      "company": "Protocol Labs",
+      "companyURL": "https://protocol.ai/",
       "url": "https://berjon.com/",
+      "note": "The New York Times until Sep 2022",
       "w3cid": 34327
     },
     {
@@ -653,7 +654,7 @@ var[data-type]:hover::after,var[data-type]:hover::before{opacity:1}
         
         
         <dt>Editors:</dt><dd class="editor p-author h-card vcard" data-editor-id="34327">
-    <a class="u-url url p-name fn" href="https://berjon.com/">Robin Berjon</a> (<a class="p-org org h-org" href="https://nytimes.com/">The New York Times</a>)
+    <a class="u-url url p-name fn" href="https://berjon.com/">Robin Berjon</a> (<a class="p-org org h-org" href="https://protocol.ai/">Protocol Labs</a>) (The New York Times until Sep 2022)
   </dd><dd class="editor p-author h-card vcard" data-editor-id="75192">
     <span class="p-name fn">Jeffrey Yasskin</span> (<a class="p-org org h-org" href="https://google.com/">Google</a>)
   </dd>
@@ -1354,27 +1355,27 @@ known to be identifying, sensitive or otherwise potentially harmful.</p>
 <p>In maintaining duties of <a href="#dfn-duty-of-protection" id="ref-for-dfn-duty-of-protection-1">protection</a>, <a href="#dfn-duty-of-discretion" id="ref-for-dfn-duty-of-discretion-1">discretion</a> and <a href="#dfn-duty-of-loyalty" id="ref-for-dfn-duty-of-loyalty-1">loyalty</a>, user
 agents should be conservative when sharing data not necessary to satisfy a user's immediate goals.</p>
 <p>On the Web, user agents and sites often communicate data even outside the need to load and display a
-page for <dfn id="dfn-ancillary-uses" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">ancillary uses</dfn> including: </p>
+page for <dfn id="dfn-ancillary-uses" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">ancillary uses</dfn> including:</p>
 <ul>
-<li>browser telemetry, including: <ul>
-<li>performance measurements, </li>
-<li>measuring feature usage, </li>
-<li>debugging site, browser and networking issues, and, </li>
+<li>browser telemetry, including:<ul>
+<li>performance measurements,</li>
+<li>measuring feature usage,</li>
+<li>debugging site, browser and networking issues, and,</li>
 <li>detecting security problems or attacks;</li>
 </ul>
 </li>
-<li>site telemetry, including: <ul>
-<li>performance measurements, </li>
-<li>analytics about usage and visitors, </li>
-<li>debugging site issues, and, </li>
+<li>site telemetry, including:<ul>
+<li>performance measurements,</li>
+<li>analytics about usage and visitors,</li>
+<li>debugging site issues, and,</li>
 <li>detecting security problems or attacks;</li>
 </ul>
 </li>
-<li>advertising and social media sharing, including: <ul>
+<li>advertising and social media sharing, including:<ul>
 <li>measurement, targeting, ad auctions, personalization, fraud prevention;</li>
 </ul>
 </li>
-<li>performance, including caching and prefetching content; </li>
+<li>performance, including caching and prefetching content;</li>
 <li>software updates.</li>
 </ul>
 <p><dfn id="dfn-telemetry-and-analytics" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">Telemetry and analytics</dfn>, including browser telemetry and site telemetry, are a common
@@ -1385,7 +1386,7 @@ collection mechanism identified as more intrusive or costly.</p>
 some people would reasonably anticipate sharing such data or identify that use as a
 commonly-accepted contextual norm and some people would be willing to participate (for example,
 might have explicitly decided to contribute if they had the time and understanding to consider
-details about such a use) and some people would identify those uses as supporting their own goals. </p>
+details about such a use) and some people would identify those uses as supporting their own goals.</p>
 <p>Aggregated or <a href="#dfn-de-identified" id="ref-for-dfn-de-identified-3">de-identified</a> data is often more likely to be
 acceptable in these senses and often still contributes to the collective benefit while minimizing
 privacy threats to a particular individual (see <a href="#principle-collective-privacy">collective
@@ -1404,7 +1405,7 @@ privacy</a>). But some people might also object, in particular instances or in g
   Force">IETF</abbr> <a href="https://datatracker.ietf.org/wg/ppm/about/"><abbr title="privacy-preserving measurement">ppm</abbr></a>, <abbr title="Internet Research Task
   Force">IRTF</abbr> <a href="https://datatracker.ietf.org/rg/pearg/about/"><abbr title="Privacy
   Enhancements and Assessments Research Group">pearg</abbr></a> and <abbr title="World Wide Web Consortium">W3C</abbr> <a href="https://patcg.github.io/"><abbr title="Private Advertising Technology Community
-  Group">PATCG</abbr></a> groups may be relevant. </p>
+  Group">PATCG</abbr></a> groups may be relevant.</p>
 </aside>
 
 <div class="practice principle"><a class="marker self-link" href="#bp-sites-and-user-agents-should-seek-to-understand-and-respect-people-s-goals-and-preferences-about-use-of-data-about-them"><bdi lang="en">Principle</bdi></a>: <span class="practicelab" id="bp-sites-and-user-agents-should-seek-to-understand-and-respect-people-s-goals-and-preferences-about-use-of-data-about-them">Sites and user agents should seek to understand and respect people's
