--- a/index.html
+++ b/index.html
@@ -481,13 +481,13 @@ social interactions.
 
 On the Web, [=information flows=] may involve a wide variety of [=parties=] that are not always
 recognizable or obvious to a user within a particular interaction. Visiting a website may involve
-the parties that operate that site and its functionality, but also network attackers, which may
-include: Internet service providers; other network operators; local institutions providing a network
-connection including schools, libraries or universities; government intelligence services; malicious
-hackers who have gained access to the network or the systems of any of the other parties. High-level
-threats including [=surveillance=] may be pursued by these parties. Pervasive monitoring, a form of
-large-scale, indiscriminate surveillance, is a known attack on the privacy of users of the Internet
-and the Web [[RFC7258]].
+the parties that operate that site and its functionality, but also parties with network access,
+which may include: Internet service providers; other network operators; local institutions providing
+a network connection including schools, libraries or universities; government intelligence services;
+malicious hackers who have gained access to the network or the systems of any of the other parties.
+High-level threats including [=surveillance=] may be pursued by these parties. Pervasive monitoring,
+a form of large-scale, indiscriminate surveillance, is a known attack on the privacy of users of the
+Internet and the Web [[RFC7258]].
 
 Information flows may also involve other people &mdash; for example, other users of a site &mdash;
 which could include friends, family members, teachers, strangers or government officials. Some
