copyedit per darobin

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ a form of large-scale, indiscriminate surveillance, is a known attack on the pri
 Internet and the Web [[RFC7258]].
 
 Information flows may also involve other people &mdash; for example, other users of a site &mdash;
-which could include friends, family members, teachers, strangers or government officials. Some
+which could include friends, family members, teachers, strangers, or government officials. Some
 threats to privacy, including both [=disclosure=] and harassment, may be particular to the other
 people involved in the information flow.
 
