Identity: move identifiers definition to Common Concepts, per @jyasskin suggestion

--- a/index.html
+++ b/index.html
@@ -909,23 +909,6 @@ present in that context. People frequently present different identities to
 different contexts, and also frequently share an identity among several
 contexts.
 
-In computer systems and on the web, an [=identity=] seen by a particular
-website is typically assigned an <dfn>identifier</dfn> of some type, which
-makes it easier for an automated system to store data about that [=person=].
-Examples of [=identifiers=] for a [=person=] can be:
-* their name,
-* an identification number including those mapping to a device that this
-[=person=] may be using,
-* their phone number,
-* their location data,
-* an online identifier such as email or IP addresses,
-* browser [=fingerprints=] (based on a combination of
-configuration characteristics), or
-* factors specific to their physical, physiological, genetic, mental,
-economic,
-cultural, social, or behavioral [=identity=],
-* strings derived from other [=identifiers=], for instance through hashing.
-
 <dfn>Cross-context recognition</dfn> is the act of recognising that an
 [=identity=] in one [=context=] is the same [=person=] as an [=identity=] in
 another [=context=]. This contributes to [=surveillance=], [=correlation=],
@@ -1678,6 +1661,25 @@ but still treat it [=appropriately=].
 We define <dfn data-lt="data">personal data</dfn> as any information that is directly or
 indirectly related to an identified or identifiable [=person=], such as by reference to an
 [=identifier=] ([[GDPR]], [[OECD-Guidelines]], [[Convention-108]]).
+
+On the web, an <dfn>identifier</dfn> of some type is typically assigned for an
+[=identity=] as seen by a website, which makes it easier for an automated
+system to store data about that [=person=].
+
+Examples of [=identifiers=] for a [=person=] can be:
+
+* their name,
+* an identification number including those mapping to a device that this
+[=person=] may be using,
+* their phone number,
+* their location data,
+* an online identifier such as email or IP addresses,
+* browser [=fingerprints=] (based on a combination of
+configuration characteristics), or
+* factors specific to their physical, physiological, genetic, mental,
+economic,
+cultural, social, or behavioral [=identity=],
+* strings derived from other [=identifiers=], for instance through hashing.
 
 If a [=person=] could reasonably be identified or re-identified through the combination of [=data=] with other
 [=data=], then that [=data=] is [=personal data=].
