Identity: reword to clarify supercookies for cross-partition same-site privacy harm, thanks @jyasskin and @jonathanKingston

--- a/index.html
+++ b/index.html
@@ -948,10 +948,10 @@ effective means to mitigate the issue.
 <dfn>Same-site recognition</dfn> is when a single site discovers and uses the
 fact that two or more visits probably came from the same [=person=].
 
-This is generally accomplished by either "supercookies" or browser
-[=fingerprinting=]. A privacy harm occurs if a [=person=] reasonably expects
-that they'll be using a different [=identity=] for different visits to a
-single site, but the site engages in [=same-site recognition=].
+A privacy harm occurs if a [=person=] reasonably expects that they'll be using
+a different [=identity=] for different visits to a single site, but the site
+engages in [=same-site recognition=]. This harm is generally accomplished by
+either "supercookies" or browser [=fingerprinting=].
 
 [=User agents=] can't, in general, determine exactly where [=context=]
 boundaries are within a site, or know how a site allows a [=person=] to
