Apply suggestions from code review
Co-authored-by: Amy Guy <amy@rhiaro.co.uk>
Co-authored-by: Robin Berjon <robin@berjon.com>

--- a/index.html
+++ b/index.html
@@ -1556,10 +1556,10 @@ prevent them from doing so. Sites should include deception in their threat model
 Examples of ways in which a [=user agent=] may support this principle include:
 * Generating domain-specific email addresses or other directed identifiers so that [=people=] can log into the
   site without becoming recognisable across contexts.
-* Offering the option to produce fake geolocation and accelerometry data, with parameters specified by the [=user=].
+* Offering the option to generate geolocation and accelerometry data with parameters specified by the [=user=].
 * Making it easy to upload a picture while pretending to have it taken by the camera.
 * Faking the acceptance of notification prompts (or pretending that notifications have already been accepted).
-* Filtering outbound network traffic so as to replace specific strings (TCF, hashed email, navigation identifiers).
+* Filtering outbound network traffic so as to replace specific strings (hashed email, navigation identifiers, consent strings).
 * Randomly swapping third-party cookies with the browsers of other [=people=].
 
 <!--
