Avoid asking for fake consent
Fake consent is worse than no consent, because of privacy labour and
distraction from consent requests that should get careful attention.

--- a/index.html
+++ b/index.html
@@ -549,6 +549,14 @@ there should be a vivid indicator that data is being transmitted shown at all ti
 that the person can easily switch it off. In general, providing [=consent=] should be rare,
 difficult, highly intentional, and temporary.
 
+In some situations, a [=party=] can comply with a requirement to get a [=person=] to perform
+some action that is treated as <q>consent</q> without obtaining the person's actual, informed [=consent=].
+Because requests for consent should be important enough to justify attention from a [=person=], a
+[=party=] should avoid distracting the user with attempts to get fake <q>consent</q> in situations
+when actual [=consent=] would not be required by these principles.  Responding to unnecessary requests
+for consent, real or fake, is unacceptable [=privacy labour=] and limits how much time and attention
+a [=person=] can devote to meaningful [=consent=] decisions.
+
 When an [=opt-out=] mechanism exists, it should preferably be complemented by a
 <dfn>global opt-out</dfn> mechanism. The function of a [=global opt-out=] mechanism is to
 rectify the <dfn class="export">automation asymmetry</dfn> whereby service providers can automate
@@ -1480,6 +1488,9 @@ more accountable. Examples of mitigations include:
 Attempts to obtain consent to [=processing=] that is not in accordance with the person's
 true preferences result in imposing unwanted [=privacy labour=] on the person, and may
 result in people erroneously giving consent that they regret later.
+
+Attempts to obtain consent that is not needed for the processing to be performed are
+also harmful because they tend to distract the user from meaningful requests for consent.
 
 <div class="practice">
 <p>
